--- a/SolarMonitor/SolarMonitor.Communication.Test/SolarMonitor.Communication.Test.csproj
+++ b/SolarMonitor/SolarMonitor.Communication.Test/SolarMonitor.Communication.Test.csproj
@@ -45,13 +45,22 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Messages\Queries\QpiriMessageTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SolarMonitor.Communication\SolarMonitor.Communication.csproj">
+      <Project>{508fc204-c4e6-431b-8fec-d375d7faf20d}</Project>
+      <Name>SolarMonitor.Communication</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
