--- a/SolarMonitor/SolarMonitor.Communication.Test/SolarMonitor.Communication.Test.csproj
+++ b/SolarMonitor/SolarMonitor.Communication.Test/SolarMonitor.Communication.Test.csproj
@@ -53,7 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Messages\Queries\QpiriMessageTest.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Messages\Queries\QgsMessageTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
