--- a/SolarMonitor/SolarMonitor.Communication/SolarMonitor.Communication.csproj
+++ b/SolarMonitor/SolarMonitor.Communication/SolarMonitor.Communication.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>SolarMonitor.Communication</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -51,12 +56,16 @@
     <Compile Include="Messages\Queries\QgsMessage.cs" />
     <Compile Include="Messages\Queries\QpiriMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThingSpeak\ThingSpeakClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Messages\SetParameters\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Messages\P18ComUSBProcessor.java" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
